fix nav bar version mobile

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,7 @@
-.hidden {
-    display: none;
+#mobile-menu.show {
+    transform: translateX(0);
+}
+
+.menu-open {
+    overflow: hidden;
 }
